--- a/packages/app/src/app/component/layout/sidebar-right/sidebar-right.component.scss
+++ b/packages/app/src/app/component/layout/sidebar-right/sidebar-right.component.scss
@@ -1,6 +1,4 @@
 .sb {
-  border-left: 1px solid #e4e4e4;
-
   .circle-item {
     width: 40px;
     height: 40px;
